--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     </header>
     <main>
         <!-- jumbotron -->
-        <section class="bg-green">
+        <section id="jumbotron" class="bg-green">
             <div class="container  py-50 mt-90 text-center txt-white ">
                 <img src="assets/img/avataaars.svg" alt="avatar">
                 <h1 class="f-weight-700 txt-size-sm-44 txt-size-lg-64">START BOOTSTRAP</h1>
                 <!-- star -->
-                <div class="star mt-20">
+                <div class="star ">
                     <div class="line-star inline-block vertical-align-m ">
                     </div>
                     <i class="fas fa-star inline-block vertical-align-m "></i>
@@ -67,47 +67,43 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class=" ">
-                            <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">PORTFOLIO</h2>
-                        </div>
+                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">PORTFOLIO</h2>
                     </div>
                     <div class="col-sm-12">
-                        <div class=" ">
-                            <div class="star mt-20">
-                                <div class="line-star inline-block vertical-align-m ">
-                                </div>
-                                <i class="fas fa-star inline-block vertical-align-m "></i>
-                                <div class="line-star inline-block vertical-align-m ">
-                                </div>
+                        <div class="star mt-20">
+                            <div class="line-star inline-block vertical-align-m ">
+                            </div>
+                            <i class="fas fa-star inline-block vertical-align-m "></i>
+                            <div class="line-star inline-block vertical-align-m ">
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="content ">
                             <img src="assets/img/cabin.png" alt="cabin">
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="content ">
                             <img src="assets/img/cabin.png" alt="cabin">
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="content ">
                             <img src="assets/img/cabin.png" alt="cabin">
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="content">
                             <img src="assets/img/cabin.png" alt="cabin">
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="content">
                             <img src="assets/img/cabin.png" alt="cabin">
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="content">
                             <img src="assets/img/cabin.png" alt="cabin">
                         </div>
@@ -116,8 +112,31 @@
             </div>
         </section>
         <!-- about -->
-        <section>
-
+        <section id="about" class="bg-green py-50">
+            <div class="container text-center txt-white">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">ABOUT</h2>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="star mt-20">
+                            <div class="line-star inline-block vertical-align-m ">
+                            </div>
+                            <i class="fas fa-star inline-block vertical-align-m "></i>
+                            <div class="line-star inline-block vertical-align-m ">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 txt-size-sm-20 text-left">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptates fugit sapiente dolores inventore doloribus sit officia numquam. Commodi maxime nostrum similique non veritatis obcaecati nihil nemo libero aut doloribus.</p>
+                    </div>
+                    <div class="col-md-6 txt-size-sm-20 text-left ">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In fugiat, hic iste illo eos sunt illum officiis at perspiciatis sit possimus nulla maxime nihil, aliquid natus voluptatem numquam. Pariatur, voluptatem.</p>
+                    </div>
+                    <div class="col-md-12">
+                        <button type="button" class="btn .btn-outline-light mt-40" txt-size-sm-20> <i class="fas fa-download"></i> Free Download</button> </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
