--- a/index.html
+++ b/index.html
@@ -138,6 +138,44 @@
                 </div>
             </div>
         </section>
+        <!-- contact me -->
+        <section id="contact-me" class="py-50">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">CONTACT ME</h2>
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="star mt-20 text-center">
+                            <div class="line-star inline-block vertical-align-m ">
+                            </div>
+                            <i class="fas fa-star inline-block vertical-align-m "></i>
+                            <div class="line-star inline-block vertical-align-m ">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <form class="mt-40">
+                            <div class="form-group">
+                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control txt-size-sm-24" id="exampleFormControlTextarea1" rows="3" placeholder="name@example.com"></textarea>
+                            </div>
+                            <button type="button" class="btn btn-success mt-20 txt-size-sm-20">Success</button>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
 
