--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                    <a class="navbar-brand txt-white f-weight-700 txt-size-sm-20 txt-size-lg-28" href="#">START BOOTSTRAP</a>
+                    <a class="navbar-brand txt-white f-weight-700 txt-size-sm-20 txt-size-md-28" href="#">START BOOTSTRAP</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -50,7 +50,7 @@
         <section id="jumbotron" class="bg-green">
             <div class="container  py-50 mt-90 text-center txt-white ">
                 <img src="assets/img/avataaars.svg" alt="avatar">
-                <h1 class="f-weight-700 txt-size-sm-44 txt-size-lg-64">START BOOTSTRAP</h1>
+                <h1 class="f-weight-700 txt-size-sm-44 txt-size-md-64">START BOOTSTRAP</h1>
                 <!-- star -->
                 <div class="star ">
                     <div class="line-star inline-block vertical-align-m ">
@@ -59,7 +59,7 @@
                     <div class="line-star inline-block vertical-align-m ">
                     </div>
                 </div>
-                <h3 class=" txt-size-sm-20 txt-size-lg-24">Graphic Artist - Web Designer - Illustrator</h3>
+                <h3 class=" txt-size-sm-20 txt-size-md-24">Graphic Artist - Web Designer - Illustrator</h3>
             </div>
         </section>
         <!-- portfolio -->
@@ -67,7 +67,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">PORTFOLIO</h2>
+                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-md-48">PORTFOLIO</h2>
                     </div>
                     <div class="col-sm-12">
                         <div class="star mt-20">
@@ -78,34 +78,64 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 ">
                         <div class="content ">
-                            <img src="assets/img/cabin.png" alt="cabin">
+                            <div class="fit-content">
+                                <div class="overlay">
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                                <img src="assets/img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 ">
                         <div class="content ">
-                            <img src="assets/img/cabin.png" alt="cabin">
+                            <div class="fit-content">
+                                <div class="overlay">
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                                <img src="assets/img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 ">
                         <div class="content ">
-                            <img src="assets/img/cabin.png" alt="cabin">
+                            <div class="fit-content">
+                                <div class="overlay">
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                                <img src="assets/img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 ">
                         <div class="content">
-                            <img src="assets/img/cabin.png" alt="cabin">
+                            <div class="fit-content">
+                                <div class="overlay">
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                                <img src="assets/img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 ">
                         <div class="content">
-                            <img src="assets/img/cabin.png" alt="cabin">
+                            <div class="fit-content">
+                                <div class="overlay">
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                                <img src="assets/img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 ">
                         <div class="content">
-                            <img src="assets/img/cabin.png" alt="cabin">
+                            <div class="fit-content">
+                                <div class="overlay">
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                                <img src="assets/img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,7 +146,7 @@
             <div class="container text-center txt-white">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">ABOUT</h2>
+                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-md-48">ABOUT</h2>
                     </div>
                     <div class="col-lg-12">
                         <div class="star mt-20">
@@ -143,7 +173,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-lg-48">CONTACT ME</h2>
+                        <h2 class="f-weight-700 txt-size-sm-36 txt-size-md-48">CONTACT ME</h2>
                     </div>
                     <div class="col-sm-12">
                         <div class="star mt-20 text-center">
@@ -157,18 +187,18 @@
                     <div class="col-sm-8 col-sm-offset-2">
                         <form class="mt-40">
                             <div class="form-group">
-                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="name@example.com">
+                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="Name">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="name@example.com">
+                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="Email Address">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="name@example.com">
+                                <input type="email" class="form-control txt-size-sm-24" id="exampleFormControlInput1" placeholder="Phone Number">
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control txt-size-sm-24" id="exampleFormControlTextarea1" rows="3" placeholder="name@example.com"></textarea>
+                                <textarea class="form-control txt-size-sm-24" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
                             </div>
-                            <button type="button" class="btn btn-success mt-20 txt-size-sm-20">Success</button>
+                            <button type="button" class="btn btn-success mt-20 txt-size-sm-20">Send</button>
                         </form>
                     </div>
 
@@ -177,7 +207,45 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="txt-white text-center">
+        <section class="foot bg-dark-blue  py-50">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6 col-xs-offset-3 col-md-4">
+                        <h4 class="txt-size-sm-24 f-weight-700 mb-24">LOCATION</h4>
+                        <p class="txt-size-sm-20 f-weight-300 mb-24">2215 John Daniel Drive Clark, MO 65243</p>
+
+                    </div>
+                    <div class="col-xs-6 col-xs-offset-3 col-md-4">
+                        <h4 class="txt-size-sm-24 f-weight-700 mb-24">AROUND THE WEB</h4>
+                        <div class="row">
+                            <div class="col-xs-3 mb-24"><i class="fab fa-facebook-f"></i></div>
+                            <div class="col-xs-3 mb-24"><i class="fab fa-twitter"></i></div>
+                            <div class="col-xs-3 mb-24"><i class="fab fa-linkedin-in"></i></div>
+                            <div class="col-xs-3 mb-24"><i class="fab fa-dribbble"></i></div>
+                        </div>
+
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <h4 class="txt-size-sm-24 f-weight-700 mb-24">ABOUT FREELANCER</h4>
+                        <p class="txt-size-sm-20 f-weight-300 mb-24">Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap .</p>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+        </section>
+        <section class="copiright">
+
+            <div class="content copiright">
+
+                <small>Copyright © Your Website 2020</small>
+            </div>
+
+
+        </section>
 
     </footer>
 
