--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <header>
         <!-- navbar -->
         <nav class="navbar navbar-default navbar-fixed-top bg-dark-blue">
-            <div class="container  py-20">
+            <div class="container  py-10">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header ">
                     <button type="button" class="navbar-toggle collapsed txt-white" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                           <span class="sr-only">Toggle navigation</span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
+                          <i class="fas fa-bars"></i>
+                          menu
                         </button>
                     <a class="navbar-brand txt-white f-weight-700 txt-size-sm-20 txt-size-md-28" href="#">START BOOTSTRAP</a>
                 </div>
@@ -48,7 +47,7 @@
     <main>
         <!-- jumbotron -->
         <section id="jumbotron" class="bg-green">
-            <div class="container  py-50 mt-90 text-center txt-white ">
+            <div class="container  py-50 mt-60 text-center txt-white ">
                 <img src="assets/img/avataaars.svg" alt="avatar">
                 <h1 class="f-weight-700 txt-size-sm-44 txt-size-md-64">START BOOTSTRAP</h1>
                 <!-- star -->
@@ -211,12 +210,12 @@
         <section class="foot bg-dark-blue  py-50">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-6 col-xs-offset-3 col-md-4">
+                    <div class="col-xs-6 col-xs-offset-3 col-md-offset-0 col-md-4">
                         <h4 class="txt-size-sm-24 f-weight-700 mb-24">LOCATION</h4>
                         <p class="txt-size-sm-20 f-weight-300 mb-24">2215 John Daniel Drive Clark, MO 65243</p>
 
                     </div>
-                    <div class="col-xs-6 col-xs-offset-3 col-md-4">
+                    <div class="col-xs-6 col-xs-offset-3 col-md-offset-0 col-md-4">
                         <h4 class="txt-size-sm-24 f-weight-700 mb-24">AROUND THE WEB</h4>
                         <div class="row">
                             <div class="col-xs-3 mb-24"><i class="fab fa-facebook-f"></i></div>
